# gaRXiv

./: .gitignore  CLAUDE.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
src/garxiv/: cli.py  config.py  db.py
src/garxiv/chunking/: chunker.py  cleaner.py  pipeline.py
src/garxiv/embeddings/: azure_openai.py  base.py  factory.py  local_bge.py  pipeline.py
src/garxiv/generation/: pipeline.py  prompt.py
src/garxiv/ingestion/: arxiv_client.py  downloader.py  parser.py  pipeline.py
src/garxiv/llm/: azure_openai_provider.py  base.py  factory.py  ollama_provider.py
src/garxiv/rerank/: base.py  factory.py  local_cross_encoder.py
src/garxiv/retrieval/: fts.py  fusion.py  pipeline.py  query_transform.py
src/garxiv/vectorstore/: azure_pgvector_store.py  base.py  factory.py  qdrant_store.py
tests/: test_arxiv_client.py  test_chunker.py  test_chunking_pipeline.py  test_cleaner.py  test_db_fts.py  test_embedding_pipeline.py  test_embeddings.py  test_fusion.py  test_generation_pipeline.py  test_llm.py  test_local_bge_provider.py  test_local_cross_encoder_reranker.py  test_ollama_integration.py  test_parser.py  test_pipeline.py  test_retrieval_fts.py  test_search_pipeline.py  test_vectorstore.py  test_vectorstore_integration.py
tests/fixtures/: sample_feed.xml
